Creative Builders Africa ltd Fixed Projects Cards responsive issue on smaller cards

--- a/styles.css
+++ b/styles.css
@@ -381,6 +381,12 @@ body{
     flex-wrap: wrap;
 }
 
+@media (max-width: 600px){
+    .card_container{
+        width: 100%;
+    }
+}
+
 #cards{
     display: flex;
     flex-direction: column;
